# elec-transit-y

./: .gitignore  README.md  app.py  environment.yml  nyc_app.py  pyproject.toml  requirements.txt
assets/: styles.css
census/analysis/: census_viz.ipynb  pop_raster.ipynb  population_ctracts.ipynb  population_tzones.ipynb  regression.ipynb  roads_ctracts.ipynb  roads_tzones.ipynb  taxi_trips_tzones.ipynb
census/analysis/.ipynb_checkpoints/: pop_raster-checkpoint.ipynb
census/data/: ny_census_tract_population.csv  nyc_census_tract_population.csv
census/data/nyc_censust_pop_density_out/: nyc_census_tracts_with_population.dbf  nyc_census_tracts_with_population.shx
census/data/nyc_ctracts_geo/: nyct2020.dbf  nyct2020.shp
census/data/nyc_ctracts_population_geo/: nyc_census_tracts_with_population.dbf
census/data/nyc_ctracts_roads_geo/: nyc_census_tracts_with_road_density.dbf  nyc_census_tracts_with_road_density.shp  nyc_census_tracts_with_road_density.shx
census/data/nyc_taxi_zones_geo/: geo_export_5d80cfbe-13fc-4d7a-a530-e88bb7a8d4ee.dbf
census/data/taxi_trips/: nyc_taxi_rides_2019_aggByPUandHour.csv  nyc_taxi_rides_zones_evChargers.xlsx  (+1 more)
census/ingestion/: census_population.ipynb
data/: nyc_taxi_rides_2019_aggByDOandHour.csv
data/nyc_censust_pop_density_out/: nyc_census_tracts_with_population.shp
data/nyct2020_24b/: nyct2020.shp.xml  nyct2020.shx
ev_nrel/: README.md  wip_ingestion.ipynb
ev_nrel/ingestion/: wip_ingestion.ipynb
ev_nrel/lambda/: lambda_function.py
notebooks/: NYC_Taxi_EDA.ipynb  README.md  Taxi_Zone_EV_Merge.ipynb
