[tool.poetry]
name = "elec-transit-y"
version = "0.1.0"
description = ""
authors = ["eshanprashar <eshanprashar@uchicago.edu>"]
readme = "README.md"
packages = [{include = "elec_transit_y"}]

[tool.poetry.dependencies]
python = "^3.11"
geopandas = "^0.14.4"
rasterio = "^1.3.10"
shapely = "^2.0.4"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"
pandas = "^2.2.2"
jupyterhub = "^4.1.5"
plotly = "^5.22.0"
nbformat = "^5.10.4"
ipykernel = "^6.29.4"
fiona = "^1.9.6"
pyogrio = "^0.8.0"
rasterstats = "^0.19.0"
rioxarray = "^0.15.5"
joblib = "^1.4.2"
mapclassify = "^2.6.1"
openpyxl = "^3.1.2"
scikit-learn = "^1.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
